# RenFlow-Bot

./: .gitignore  README.md  package.json  typedoc.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-report.yml
.github/workflows/: build-tauri.yml  check.yml  release.yml
renflow.document/: index.md
renflow.document/.vitepress/: config.ts
renflow.runner/: README.md  package.json
renflow.runner/src/: index.ts
renflow.runner/src/connectors/: ConnectorManager.ts  index.ts
renflow.runner/src/connectors/adapter/: BotAdapter.ts  index.ts  msgTypes.ts
renflow.runner/src/connectors/adapter/OneBot/: NapcatAdapter.ts  napcatMsgTypes.ts
renflow.runner/src/connectors/adapter/onebot/: NapcatAdapter.ts  NapcatMsgTypes.ts
renflow.runner/src/nodes/: BaseNode.ts  NodeManager.ts  index.ts
renflow.runner/src/nodes/builtin/: CommandAnalNode.ts  ConsoleNode.ts  CustomJSNode.ts  HtmlRenderNode.ts  HttpRequestNode.ts  IfElseNode.ts  MergeNode.ts  NoteNode.ts  SendMessageNode.ts  SendTextNode.ts  index.ts
renflow.runner/src/nodes/custom/: CustomNode.ts
renflow.runner/src/tests/: engine.smoke.ts  ifelse.default.smoke.ts  merge.all.smoke.ts
renflow.runner/src/utils/: node.ts
renflow.runner/src/workflow/: converter.ts  engine.ts  index.ts
src/: App.vue
src-tauri/: Cargo.toml
src-tauri/src/commands/: win.rs
src/components/setting-pan/: HtmlRenderSettings.vue
src/functions/: option.ts
src/functions/elements/: information.ts
src/functions/utils/: app.ts
src/views/: EditView.vue  ListView.vue  SettingsView.vue
