[package]
name = "ren-flow"
version = "0.1.0"
description = "A Tauri App"
authors = ["stapxs"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9", features = ["protocol-asset", "macos-private-api", "devtools"] }
log4rs = "1.4.0"
tauri-plugin-store = "2.4.0"
anyhow = "1.0.100"
chrono = "0.4.42"
window-vibrancy = "0.6.0"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-notification = "2.3.1"

user-notify = { path = "crates/user-notify" }
tokio = "1.48.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
warp = "0.3.7"
rfd = "0.15.4"
tauri-plugin-opener = "2.5.0"
futures-util = "0.3.31"
zip = { version = "0.6" }

[target.'cfg(target_os="windows")'.dependencies]
winver = "1.0.0"
